--- a/charts/smithgatewayservice/values.yaml
+++ b/charts/smithgatewayservice/values.yaml
@@ -24,10 +24,10 @@ service:
 resources:
   limits:
     cpu: 500m
-    memory: 512Mi
+    memory: 2Gi
   requests:
     cpu: 400m
-    memory: 512Mi
+    memory: 2Gi
 probePath: /actuator/health
 livenessProbe:
   initialDelaySeconds: 60
