--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ zuul.routes.smith-ldap-service.serviceId=smith-ldap-service
 
 
 #eureka.client.serviceUrl.defaultZone=http://10.225.150.106:8080/eureka
-eureka.client.serviceUrl.defaultZone=http://smithservices.jx-staging.34.66.57.149.nip.io/
+eureka.client.serviceUrl.defaultZone=http://smithservices.jx-staging.34.66.57.149.nip.io/eureka
 eureka.client.fetchRegistry=true
 eureka.client.registerWithEureka=true
-eureka.instance.preferIpAddress=true
+eureka.instance.preferIpAddress=false
 server.port=8084
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 11000
 ribbon.eureka.enabled=true
